# codex-usage

./: .gitignore  AGENTS.md  README.md  README_CN.md  codex_help.txt  index.html  package-lock.json  package.json  readme_dev.md
.github/workflows/: ci.yml  release.yml
scripts/: desktop-env.sh  setup-ubuntu.sh
src/: app.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  lib.rs  main.rs
src/lib/: format.ts  mock.ts  tauri.ts  types.ts
