[package]
name = "codex-usage"
version = "0.1.0"
description = "Desktop UI for Codex account usage"
authors = ["blackird"]
edition = "2021"

[lib]
name = "codex_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
